# test1

./: .gitignore  CMakeLists.txt  readme.md
c/: readme.md  run.sh
c/include/: rotate.h
c/src/: solve.c
cplusplus/: CMakeLists.txt  readme.md  run.sh  test.sh
cplusplus/include/: vector3D.hpp
cplusplus/src/: main.cpp  vector3D.cpp
cplusplus/test/: test.cpp
include/: matrix.h  solve.h
python/: requirements.txt
python/Bootstraping/: main-test.py  main.py  readme.md  test
python/BuddySystem/: Memory.py  Node.py  main-test.py  main.py  readme.md
python/Vector3D/: main.py
src/: main.c  matrix.c  rotate.c  solve.c
